--- a/src/Topxia/AdminBundle/Resources/config/routing.yml
+++ b/src/Topxia/AdminBundle/Resources/config/routing.yml
@@ -104,15 +104,15 @@ admin_block_code_check_foredit:
     defaults: { _controller: TopxiaAdminBundle:Block:checkBlockTemplateCodeForEdit }
 
 admin_block_update:
-    pattern:  /block/{blockTemplate}/update
+    pattern:  /block/{blockTemplateId}/update
     defaults: { _controller: TopxiaAdminBundle:Block:update }
 
 admin_block_edit:
-    pattern:  /block/{blockTemplate}/edit
+    pattern:  /block/{blockTemplateId}/edit
     defaults: { _controller: TopxiaAdminBundle:Block:edit }
 
 admin_block_visual_edit:
-    pattern:  /block/{blockTemplateId}/visual/edit
+    pattern:  /blockTemplate/{blockTemplateId}/visual/edit
     defaults: { _controller: TopxiaAdminBundle:Block:visualEdit }
 
 admin_block_visual_view_data:
@@ -120,12 +120,16 @@ admin_block_visual_view_data:
     defaults: { _controller: TopxiaAdminBundle:Block:dataView }
 
 admin_block_visual_edit_history:
-    pattern:  /block/{blockId}/visual/edit/history
+    pattern:  /blockTemplate/{blockTemplateId}/visual/edit/history
     defaults: { _controller: TopxiaAdminBundle:Block:visualHistory }
 
 admin_block_recovery:
-    pattern:  /block/{blockId}/history/{historyId}/recovery
+    pattern:  /block/{blockTemplateId}/history/{historyId}/recovery
     defaults: { _controller: TopxiaAdminBundle:Block:recovery }
+
+admin_block_history_data:
+    pattern:  /block/histroy/{blockId}
+    defaults: { _controller: TopxiaAdminBundle:Block:blockHistoriesData }
 
 admin_block_picture_upload:
     pattern:  /block/{blockId}/picture/upload
