增加列表页面

--- a/src/Topxia/AdminBundle/Resources/config/routing.yml
+++ b/src/Topxia/AdminBundle/Resources/config/routing.yml
@@ -31,9 +31,14 @@ admin_operation_analysis_opencourse:
     pattern:  /operation/opencourse/analysis
     defaults: { _controller: TopxiaAdminBundle:OpenCourseAnalysis:index }
 
+admin_opencourse_analysis_referer_list:
+    pattern:  /operation/opencourse/analysis/referer/list
+    defaults: { _controller: TopxiaAdminBundle:OpenCourseAnalysis:refererList }
+
 admin_opencourse_analysis_referer:
     pattern:  /operation/opencourse/analysis/referer
     defaults: { _controller: TopxiaAdminBundle:OpenCourseAnalysis:referer }
+
 
 admin_content:
     pattern:  /content
