--- a/src/Topxia/WebBundle/Resources/config/routing.yml
+++ b/src/Topxia/WebBundle/Resources/config/routing.yml
@@ -1046,6 +1046,10 @@ course_lesson_marker_update:
     defaults: { _controller: TopxiaWebBundle:Marker:updateMarker }
     methods: [POST]
 
+course_lesson_question_markers_show:
+    pattern:  /course/lesson/{mediaId}/questionmarkers/show
+    defaults: { _controller: TopxiaWebBundle:QuestionMarker:showQuestionMakers }
+
 course_lesson_question_marker_show:
     pattern:  /course/lesson/{markerId}/questionmarker/show
     defaults: { _controller: TopxiaWebBundle:QuestionMarker:showMarkerQuestion }
