delete files folder

--- a/.gitignore
+++ b/.gitignore
@@ -8,27 +8,16 @@ package.json
 /web/bundles/
 /app/cache/*
 /app/config/parameters.yml
-/app/data/session_gc_time.data
 /app/config/config_test.yml
 /app/config/menu_blacklist.yml
-/app/data/discuz/
-/app/data/plugin_installed.php
-/app/data/crontab_config.yml
-/app/data/keywords.php
-/app/data/network.lock
+/app/data
 /app/logs/*
 /build
 /files
 /installFiles
 /app/config/uc_client_config.php
 /app/config/windid_client_config.php
-/app/data/api_server.json
-/app/data/udisk/*
-/app/data/private_files/*
-/app/data/backup/*
-/app/data/upgrade/*
 /app/config/routing_plugins.yml
-/app/data/redis.php
 /plugins/*
 /build/
 /vendor/
@@ -37,9 +26,8 @@ package.json
 /scripts
 /etc/sublimetext2/edusoho.sublime-workspace
 /etc/UpgradeScripts
-/web/files/*
+/web/files
 /web/files2/*
-!/web/files/.gitkeep
 /web/customize/*
 /web/windid_client_old
 !/web/customize/.gitkeep
@@ -48,9 +36,6 @@ package.json
 src/Topxia/Service/Util/DirectCloudClient.php
 src/Topxia/WebBundle/Controller/TestController.php
 src/Topxia/WebBundle/Resources/views/Test/*
-/app/data/install.lock
-/app/data/dev.lock
-app/data/plugin_installed.php
 /web/themes/*
 !/web/themes/autumn
 !/web/themes/default
@@ -66,10 +51,7 @@ web/assets/img/default/video.png
 .buildpath
 .phpintel*
 /src/Tests/*
-/app/data/api_server.json
 /installFiles
-/app/data/trial.lock
-/app/data/session_gc_time.data
 .crunch
 *.css.map
 *.codekit
