--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ package.json
 /app/config/parameters.yml
 /app/config/config_test.yml
 /app/config/menu_blacklist.yml
-/app/data
+/app/data/*
 /app/logs/*
 /build
 /files
