云附件设置

--- a/src/Topxia/AdminBundle/Resources/config/routing.yml
+++ b/src/Topxia/AdminBundle/Resources/config/routing.yml
@@ -1464,6 +1464,10 @@ admin_edu_cloud_search:
     pattern: /setting/edu_cloud/search
     defaults: { _controller: TopxiaAdminBundle:EduCloud:searchSetting }
 
+admin_edu_cloud_attachment:
+    pattern: /setting/edu_cloud/attachment
+    defaults: { _controller: TopxiaAdminBundle:EduCloud:attachment }
+    
 admin_edu_cloud_search_clause:
     pattern: /setting/edu_cloud/search/clause
     defaults: { _controller: TopxiaAdminBundle:EduCloud:searchClause }
