--- a/src/Topxia/AdminBundle/Resources/config/menus_admin.yml
+++ b/src/Topxia/AdminBundle/Resources/config/menus_admin.yml
@@ -450,6 +450,9 @@ admin_edu_cloud_sms:
 admin_edu_cloud_search:
    name: 云搜索设置
    parent: admin_app
+admin_edu_cloud_attachment:
+   name: 云附件设置
+   parent: admin_app
 # admin_edu_cloud_email:
 #     name: 云邮件设置
 #     parent: admin_app
