--- a/src/Topxia/AdminBundle/Resources/config/menus_admin.yml
+++ b/src/Topxia/AdminBundle/Resources/config/menus_admin.yml
@@ -498,6 +498,10 @@ admin_cloud_file:
     name: 云资源
     parent: admin_app
     before: admin_setting_cloud
+admin_cloud_attachment:
+    name: 云附件
+    parent: admin_app
+    before: admin_setting_cloud
 #admin_edu_cloud_search:
 #   name: 云搜索设置
 #   parent: admin_setting_cloud_video
