--- a/src/Topxia/WebBundle/Resources/config/join_point.yml
+++ b/src/Topxia/WebBundle/Resources/config/join_point.yml
@@ -3,13 +3,15 @@ importer:
   classroom-member: Topxia\Service\Importer\ClassroomMemberImporter
 
 order:
-  course: Topxia\Service\Order\OrderProcessor\CourseOrderProcessor
-  classroom: Topxia\Service\Order\OrderProcessor\ClassroomOrderProcessor
-  vip: Topxia\Service\Order\OrderProcessor\VipOrderProcessor
-  groupSell: Topxia\Service\Order\OrderProcessor\GroupSellOrderProcessor
-
-order_target_type:
-  course: TopxiaWebBundle:Order:order-course.html.twig
-  classroom: TopxiaWebBundle:Order:classroom.html.twig
-  vip: TopxiaWebBundle:Order:vip.html.twig
-  groupSell: GroupSellBundle:GroupSell:Order/group_sell.html.twig
+  course:
+    processor: Topxia\Service\Order\OrderProcessor\CourseOrderProcessor
+    order_show_template: TopxiaWebBundle:Order:order-course.html.twig
+  classroom:
+    processor: Topxia\Service\Order\OrderProcessor\ClassroomOrderProcessor
+    order_show_template: TopxiaWebBundle:Order:classroom.html.twig
+  vip:
+    processor: Topxia\Service\Order\OrderProcessor\VipOrderProcessor
+    order_show_template: TopxiaWebBundle:Order:vip.html.twig
+  groupSell:
+    processor: Topxia\Service\Order\OrderProcessor\GroupSellOrderProcessor
+    order_show_template: GroupSellBundle:GroupSell:Order/group_sell.html.twig
