--- a/composer.json
+++ b/composer.json
@@ -51,7 +51,8 @@
 		"silex/silex" : "1.3.1",
 		"asm89/twig-cache-extension": "~1.0",
 		"flexihash/flexihash": "^1.0.0",
-		"mockery/mockery": "^0.9.4"
+		"mockery/mockery": "^0.9.4",
+		"endroid/qrcode-bundle": "~1.6"
 	},
 	"scripts" : {
 		"post-install-cmd" : [
