fix 14241 公开课推荐课程删除时没删除服务器的数据 添加推荐课程时是服务器判断

--- a/src/Topxia/WebBundle/Resources/config/routing.yml
+++ b/src/Topxia/WebBundle/Resources/config/routing.yml
@@ -2171,6 +2171,11 @@ open_course_manage_course_pick:
     pattern: /open/course/{id}/manage/recommend/pick/{filter}
     defaults: { _controller: TopxiaWebBundle:OpenCourseManage:pick,filter:'openCourse'}
 
+open_course_manage_recommend_course_delete:
+    path: /open/course/{id}/manage/recommend/{recommendId}/delete
+    defaults: { _controller: TopxiaWebBundle:OpenCourseManage:deleteRecommendCourse}
+    methods: [POST]
+
 open_course_manage_lesson_replays_edit:
     pattern:  /open/course/{courseId}/manage/lesson/{lessonId}/replays/edit
     defaults: { _controller: TopxiaWebBundle:LiveOpenCourse:editLessonReplay }
