--- a/src/Permission/PermissionBundle/Resources/config/menus_admin.yml
+++ b/src/Permission/PermissionBundle/Resources/config/menus_admin.yml
@@ -3,7 +3,7 @@ admin_roles:
     group: 2
     parent: admin_system
     children:
-        admin_role_namage:
+        admin_role_manage:
             name: 角色管理
             router_name: admin_roles
             children:
@@ -11,3 +11,16 @@ admin_roles:
                     name: 新增角色
                     mode: modal
                     group: topBtn
+                admin_role_edit:
+                    name: 编辑角色
+                    mode: modal
+                    group: groupBtn
+                    router_params:
+                        id: (role.id)
+                admin_role_delete:
+                    name: 删除角色
+                    class: role-delete
+                    group: groupBtn
+                    mode: none
+                    router_params:
+                        id: (role.id)
