--- a/src/Permission/PermissionBundle/Resources/config/routing_admin.yml
+++ b/src/Permission/PermissionBundle/Resources/config/routing_admin.yml
@@ -1,7 +1,7 @@
 admin_roles:
     pattern:  /roles
     defaults: { _controller: PermissionBundle:Role:index }
-    permissions: [admin_role_namage]
+    permissions: [admin_role_manage]
 
 admin_role_create:
     pattern:  /role/create
@@ -19,15 +19,15 @@ admin_role_delete:
 admin_role_show:
     pattern:  /role/{id}/show
     defaults: { _controller: PermissionBundle:Role:show }
-    permissions: [admin_role_namage]
+    permissions: [admin_role_manage]
 
 admin_role_check_name:
     pattern:  /role/checkName
     defaults: { _controller: PermissionBundle:Role:checkName }
-    permissions: [admin_role_namage]
+    permissions: [admin_role_manage]
 
 admin_role_check_code:
     pattern:  /role/checkCode
     defaults: { _controller: PermissionBundle:Role:checkCode }
-    permissions: [admin_role_namage]
+    permissions: [admin_role_manage]
 
