--- a/src/Topxia/AdminBundle/Resources/config/routing.yml
+++ b/src/Topxia/AdminBundle/Resources/config/routing.yml
@@ -529,18 +529,18 @@ admin_order_detail:
 admin_order_refunds:
     pattern: /order/refunds/{targetType}
     defaults: { _controller: TopxiaAdminBundle:OrderRefund:refunds }
-    permissions: [admin_course_refunds_manage]
+    permissions: [admin_finance]
 
 admin_order_cancel_refund:
     pattern: /order/{id}/cancel_refund
     defaults: { _controller: TopxiaAdminBundle:OrderRefund:cancelRefund }
     methods: [POST]
-    permissions: [admin_course_refunds_manage]
+    permissions: [admin_finance]
 
 admin_order_audit_refund:
     pattern: /order/{id}/audit_refund
     defaults: { _controller: TopxiaAdminBundle:OrderRefund:auditRefund }
-    permissions: [admin_course_refunds_manage]
+    permissions: [admin_finance]
 
 admin_setting_site:
     pattern:  /setting/site
@@ -1681,12 +1681,11 @@ admin_coin_orders_log:
 admin_bill:
     pattern: /coin/bill
     defaults: { _controller: TopxiaAdminBundle:Coin:cashBill }
-    permissions: [admin_coin_records]
 
 admin_bill_export_csv:
     pattern: /coin/bill/export/{cashType}
     defaults: { _controller: TopxiaAdminBundle:Coin:exportCsv}
-    permissions: [admin_cash_bill,admin_coin_records]
+    permissions: [admin_bill,admin_coin_records]
 
 admin_order_manage_export_csv:
     pattern: /order/manage/export/{targetType}
