添加回退网址

--- a/src/Topxia/WebBundle/Resources/config/routing.yml
+++ b/src/Topxia/WebBundle/Resources/config/routing.yml
@@ -1863,6 +1863,7 @@ pay_center_show:
 pay_center_pay:
     path:   /pay/center/pay
     defaults: { _controller: TopxiaWebBundle:PayCenter:pay }
+    methods: [POST]
 
 pay_center_auth_unbind:
     path:   /pay/center/auth_unbind
