--- a/src/Custom/WebBundle/Resources/config/services.yml
+++ b/src/Custom/WebBundle/Resources/config/services.yml
@@ -1,5 +1,7 @@
 parameters:
 #    custom_web.example.class: Custom\WebBundle\Example
+    template_overwrite_map:
+        TopxiaWebBundle : CustomWebBundle
 
 services:
 #    custom_web.example:
